k3s/sol/components/ollama/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gpt.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
        - name: forwardauth-authelia
          namespace: base
      services:
        - name: open-webui
          port: 80
  tls:
    secretName: ollama-prod-tls
